--- a/style1.css
+++ b/style1.css
@@ -1,43 +1,147 @@
-/* style.css */
-
-body {
-    font-family: Arial, sans-serif;
+/* Reset default margin and padding for all elements */
+* {
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
+    box-sizing: border-box;
 }
 
-.container {
-    max-width: 800px;
-    margin: 50px auto;
+/* Apply styles to specific elements */
+body {
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 1em 0;
+}
+
+nav {
+    background-color: #a54c2f;
+    overflow: hidden;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+nav li {
+    float: left;
+}
+
+nav a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+section {
+    max-width: 1200px;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fff;
-    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
-    text-align: center;
-    color: #333;
+    color: #fff;
+}
+
+h2 {
+    color: #445;
+}
+
+h3 {
+    color: #777;
 }
 
 p {
-    margin-bottom: 20px;
-    color: #555;
+    color: #666;
 }
 
-.repo-link {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.repo-link a {
-    color: #007bff;
+a {
+    color: #007BFF;
     text-decoration: none;
 }
 
-@media screen and (max-width: 600px) {
-    .container {
-        margin: 20px auto;
-    }
+.cta-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007BFF;
+    color: #fff;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 0.01em 0;
+    bottom: 0;
+    width: 100%;
+}
+
+.social-icons {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.social-icons li {
+    margin: 0 5px;
+}
+
+.social-icons img {
+    width: 20px;
+    height: 20px;
+}
+
+.button {
+    display: inline-block;
+    padding: 5px 20px;
+    margin: 3px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #008400;
+    background-color: #dfc3a8;
+    border: 2px solid #000000;
+    border-radius: 2px;
+    cursor: pointer;
+    width: 70px;
+    height: 20px;
+}
+
+.justified-text {
+    text-align: justify;
+}
+
+/* Add styles for your course-related elements */
+.course-section {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.course-subsection {
+    width: 48%;
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin: 10px; /* Added "px" for the margin value */
 }
