--- a/style1.css
+++ b/style1.css
@@ -13,14 +13,14 @@ body {
 }
 
 header {
-    background-color: #333;
+    background-color: #561;
     color: #fff;
     text-align: center;
     padding: 1em 0;
 }
 
 nav {
-    background-color: #a54c2f;
+    background-color: #a54f5f;
     overflow: hidden;
 }
 
